# vimfiles

./: .gitignore  README.md  coc.vim  core.vim  install.ps1  install.py  install.sh  mappings.vim  plug.vim  pyproject.toml  vimrc  vimrc.example
ftplugin/: json.vim
lib/: coc-settings.json  coc.vim  index.vim  mappings.vim  plug.vim
