[tool.poetry]
name = "vimfiles"
version = "0.1.0"
description = "Gerald's vimfiles"
authors = ["Gerald <gera2ld@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
